--- a/HedgeModManager/Languages/es-MX.xaml
+++ b/HedgeModManager/Languages/es-MX.xaml
@@ -27,7 +27,7 @@
     <system:String x:Key="MainUISaveAndPlay"   >Guardar y Jugar</system:String>
     <system:String x:Key="MainUIPlay"          >Jugar</system:String>
     <system:String x:Key="MainUIMLDownloadFail">Descarga del cargador de mods fallida</system:String>
-    
+
     <!-- Mods UI Strings -->
     <system:String x:Key="ModsUIName"           >Nombre</system:String>
     <system:String x:Key="ModsUIVersion"        >Versión</system:String>
@@ -94,6 +94,18 @@
     <system:String x:Key="AboutWindowUILine2"  >Necesita una versión legal de cualquiera de los juegos soportados.</system:String>
     <system:String x:Key="AboutWindowUICredits">Créditos:</system:String>
 
+    <!-- ProfileWindow UI Strings -->
+    <system:String x:Key="ProfileWindowUITitle"      >Gestionar perfiles</system:String>
+    <system:String x:Key="ProfileWindowUIRenameTitle">Renombrar perfil</system:String>
+    <system:String x:Key="ProfileWindowUICreateTitle">Crear perfil</system:String>
+    <system:String x:Key="ProfileWindowUIName"       >Nombre del perfil</system:String>
+    <system:String x:Key="ProfileWindowUIFile"       >Nombre del archivo del perfil</system:String>
+    <system:String x:Key="ProfileWindowUIAdd"        >Añadir perfil</system:String>
+    <system:String x:Key="ProfileWindowUIRename"     >Renombrar perfil</system:String>
+    <system:String x:Key="ProfileWindowUIClone"      >Clonar perfil</system:String>
+    <system:String x:Key="ProfileWindowUIDelete"     >Borrar perfil</system:String>
+    <system:String x:Key="ProfileWindowUINameLabel"  >Nombre del perfil:</system:String>
+
     <!-- EditModWindow UI Strings -->
     <system:String x:Key="EditModWindowUIHeader">Añade unos detalles sobre tu mod.</system:String>
 
@@ -121,10 +133,10 @@
     <system:String x:Key="StatusUIDownloadingCodes"       >Descargando trucos para {0}</system:String>
     <system:String x:Key="StatusUIDownloadFinished"       >Descarga finalizada</system:String>
     <system:String x:Key="StatusUIDownloadFailed"         >Descarga fallida</system:String>
-    
+
     <!-- Dialog UI Strings -->
     <system:String xml:space="preserve" x:Key="DialogUIDeleteMod">¿Quieres borrar "{0}"?&#x0a;¡Ésta acción no puede deshacerse!</system:String>
-    
+
     <!-- Status UI Lang Stuff Strings -->
     <system:String x:Key="StatusUIUpdateCompletedSingular"      >completado</system:String>
     <system:String x:Key="StatusUIUpdateCompletedPlural"        >completados</system:String>
