--- a/HedgeModManager/Languages/zh-TW.xaml
+++ b/HedgeModManager/Languages/zh-TW.xaml
@@ -94,6 +94,18 @@
     <system:String x:Key="AboutWindowUILine2"  >需要合法擁有的遊戲來支持。</system:String>
     <system:String x:Key="AboutWindowUICredits">來源：</system:String>
 
+    <!-- ProfileWindow UI Strings -->
+    <system:String x:Key="ProfileWindowUITitle"      >管理設定檔</system:String>
+    <system:String x:Key="ProfileWindowUIRenameTitle">更改設定檔</system:String>
+    <system:String x:Key="ProfileWindowUICreateTitle">創建設定檔</system:String>
+    <system:String x:Key="ProfileWindowUIName"       >設定檔名稱</system:String>
+    <system:String x:Key="ProfileWindowUIFile"       >配置設定檔名稱</system:String>
+    <system:String x:Key="ProfileWindowUIAdd"        >新增設定檔</system:String>
+    <system:String x:Key="ProfileWindowUIRename"     >更改設定檔</system:String>
+    <system:String x:Key="ProfileWindowUIClone"      >複製設定檔</system:String>
+    <system:String x:Key="ProfileWindowUIDelete"     >刪除設定檔</system:String>
+    <system:String x:Key="ProfileWindowUINameLabel"  >設定檔名稱：</system:String>
+
     <!-- EditModWindow UI Strings -->
     <system:String x:Key="EditModWindowUIHeader">請填寫有關一些MOD資料</system:String>
 
