--- a/HedgeModManager/UI/ProfileManagerRenameWindow.xaml
+++ b/HedgeModManager/UI/ProfileManagerRenameWindow.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
         <TextBlock x:Name="Header" Text="HEADER" TextAlignment="Center" FontSize="30" Foreground="{DynamicResource HMM.Window.HeaderAccentBrush}" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="20,0" TextWrapping="Wrap"/>
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{DynamicResource ProfileWindowUINameLabel}" Margin="55,3,398.667,41" Grid.Row="1"></TextBlock>
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{DynamicResource ProfileWindowUINameLabel}" Margin="55,3,363.667,41" Grid.Row="1" Width="106"></TextBlock>
         <TextBox x:Name="ProfileNameTextbox" Text="{Binding NewProfileName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,21,0,18" Width="414"></TextBox>
         <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="-4" Grid.Row="2" Background="{StaticResource HMM.Window.DialogBottom}">
             <Button Content="{StaticResource CommonUIOK}" Margin="8,0,0,0" VerticalAlignment="Center" Width="75" Height="23" Click="UI_OK_Click" IsDefault="True" />
