--- a/HedgeModManager/Languages/es-MX.xaml
+++ b/HedgeModManager/Languages/es-MX.xaml
@@ -47,6 +47,7 @@
     <!-- Codes UI Strings -->
     <system:String x:Key="CodesUIName"    >Nombre</system:String>
     <system:String x:Key="CodesUIDownload">Descargar trucos de la comunidad</system:String>
+    <system:String x:Key="CodesUIUpdate"  >Actualizar códigos de la comunidad</system:String>
     <system:String xml:space="preserve" x:Key="CodesUIVersionIncompatible">Los códigos instalados son incompatibles con el cargador de códigos.&#x0a;Por favor, actualiza los códigos y el cargador de códigos.&#x0a;ADVERTENCIA: Esto borrará cualquier código personalizado.</system:String>
 
     <!-- Settings UI Strings -->
@@ -133,6 +134,8 @@
     <system:String x:Key="StatusUIDownloadingCodes"       >Descargando trucos para {0}</system:String>
     <system:String x:Key="StatusUIDownloadFinished"       >Descarga finalizada</system:String>
     <system:String x:Key="StatusUIDownloadFailed"         >Descarga fallida</system:String>
+    <system:String x:Key="StatusUICodeUpdatesAvailable"   >¡Actualización de códigos disponible!</system:String>
+    <system:String x:Key="StatusUINoCodeUpdatesFound"     >No se han encontrado actualizaciones de códigos.</system:String>
 
     <!-- Dialog UI Strings -->
     <system:String xml:space="preserve" x:Key="DialogUIDeleteMod">¿Quieres borrar "{0}"?&#x0a;¡Ésta acción no puede deshacerse!</system:String>
